# CSCI8980

./: .gitignore  .gitmodules  README.md
final/: .gitignore  MyRingnet.py  MyRingnet_bak.py  Ringnet.py  config_test.py  convert.py  dataset.py  dynamic_contour_embedding.py  environment.yml  evaluate.py  flame.py  flame_config.py  flame_neutral.py  flame_test.py  good_evaluate.py  openpose.py
final/smpl_webuser/: __init__.py  serialization.py
final/test_data/params/: test.npy
final/test_data/texture/: 000001.mtl
mini_proj/: CMakeLists.txt
mini_proj/src/: CMakeLists.txt  base.h  car.cc  car.h  cem.cc  cem.h  main.cc  main.h  obstacle.cc  obstacle.h  rectangle.cc  rectangle.h  rl.cc  rl.h  runrl.h  shader.cc  shader.h  shape.cc  shape.h
mini_proj/src/glad/: CMakeLists.txt
mini_proj/src/glad/include/glad/: glad.h
mini_proj/src/glad/src/: glad.c
mini_proj/src/shaders/: shape.fs  shape.vs
